# praktikum1-strukturData

./: README.md
TugasPraktikum1/: CMakeLists.txt  main.cpp
TugasPraktikum1/include/: groupArray.hpp  pointer.hpp
TugasPraktikum1/src/functionTugas/groupArray/: groupArray.cpp
TugasPraktikum1/src/functionTugas/pointer/: pointer.cpp
